formatting, and cleanup, working through eclipse compiler warnings